ダークテーマに変更

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
-  background-color: white;
-  color: black;
+  background-color: #121212;
+  color: #eeeeee;
 }
 
 h1 {
