--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
+
 body {
-  font-family: sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   background-color: #121212;
   color: #eeeeee;
 }
